themes/generic/style.module.css
/* ... */
@font-face {
    font-family: 'ubuntu';
    src: url('./UbuntuTitling-Bold.ttf') format('truetype');
    ascent-override: 102%;
}

@font-face {
    font-family: 'mezmerize';
    src: url('./Mesmerize_Sb.otf') format('opentype');
}

.sixteenNine {
    .logoHolder {
        height: 100px;
        margin-left: var(--paddings);
        margin-right: var(--paddings);
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
}
.sixteenNineDuoSplitCam, .sixteenNineDuo {
    --fontMinScale: 0.75;
    .logoHolder{
        height: calc(100% - 0.8em);
        margin: 0.4em;
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }

    .gameInfo {
        .gameData {
            max-width: 460px;
            min-width: 400px;
        }
        .gameName {
            max-height: 80px;
        }
    }
    .bottomBar{
        padding-top: 0.5em;
        margin-bottom: -2px;
    }
}

.deviceIcon {
    margin: -0.4em;
    & > img {
        height: 100%;
        width: 100%;
        object-fit: contain;
    }
}
.sixteenNineDuoCornered{
    .logoHolder{
        flex-grow: 1;
        height: 2.5em;
        margin: 0.4em;
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
}
.fourThree {
    .logoHolder {
        height: 80px;
        margin-left: var(--paddings);
        margin-right: var(--paddings);
        .logo{
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
    .content{
        font-size: 0.9em;
    }
}
.fourThreeDuoSplitCam, .fourThreeDuo{
    .logoHolder {
        height: calc(100% - 0.04em);
        margin: 0.02em;
        .logo{
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
    .bottomBar{
        padding-top: 0.3em;
        margin-bottom: -2px;
        gap: 2em
    }
    .topBar, .bottomBar{
        font-size: 0.7em;
    }

    .gameInfo {
        .gameData {
            width: 500px;
        }
    }
    .playerNameBlobLeft, .playerNameBlobRight{
    }
    .timer{
    -webkit-text-stroke: 1.3px var(--darkerPurple);
    }
}
.pause {
    .logoHolder{
        height: calc(4.5em);
        margin: 0.4em;
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
}
.yapping {
    .logoHolder{
        height: calc(4.5em);
        margin: 0.4em;
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
}
.yappingDuoCam {
    .logoHolder{
        height: calc(4.5em);
        margin: 0.4em;
        .logo {
            background: url("./img/logo.png") center/contain no-repeat;
        }
    }
}
.pauseFullCam {
    .yappingImage{
        justify-content: flex-end;
        align-items: flex-end;
        .sponsors{
            height: 80%;
            width: 80%;
        }
    }
}
.nowPlaying {
    position: absolute;
    bottom: 0.5em;
    left: 0.6em;
    right: 0.6em;
    text-align: right;
}
.bottomLeft{
    --paddings: 0.6em;
}
.leftBar {
    justify-content: space-between;
    --paddings: 0.6em;
    gap: 0.8em;
}
.mainArea{
    .sponsors{
        width: 90%;
        height: 95%;
        margin: 2.5% 5%;
    }
}
.mainArea, .leftBar, .midBar, .bottomBar, .topBar, .gameView, .topRight, .bottomLeft, .camera {
    background: var(--main-background);
}
.topBar {
    position: relative;
    .playerNameBlobLeft, .playerNameBlobRight{
        position: absolute;
        background: var(--orange);
        bottom: -0.3em;
        --paddings: 0.4em;
        min-width: 8em;
        & > div {
            margin: 0 var(--paddings);
            &:first-child{
                margin-top: var(--paddings);
            }
            &:last-child{
                margin-bottom: var(--paddings);
            }
        }
    }
    .playerNameBlobLeft{
        border-top-right-radius: var(--borderRadius);
        border-bottom-right-radius: var(--borderRadius);
        border-left-width: 0;
        left: 0;
        & > div {
            margin-right: calc(var(--paddings) * 1.5);
        }
    }
    .playerNameBlobRight{
        border-top-left-radius: var(--borderRadius);
        border-bottom-left-radius: var(--borderRadius);
        border-right-width: 0;
        text-align: right;
        right: 0;
        .personList{
            justify-content: right;
        }
        & > div {
            margin-left: calc(var(--paddings) * 1.5);
        }
    }
}

.bottomBar {
    justify-content: space-around;
    gap: 1em;

    .camera {
        height: 100%;
        flex-grow: 1.7;
        align-self: flex-end;
        &:first-child.border{
            border-left-width: 0;
            border-bottom-width: 0;
        }
        &:last-child.border{
            border-right-width: 0;
            border-bottom-width: 0;
        }
    }
}
.camera {
    height: 300px;
    .border{
        border-left-width: 0;
        border-bottom-width: 0;
    }
}
.breakCamera {
    .border {
        border-right-width: 0;
        border-top-width: 0;
    }
}
.breakCamera {
    .border {
        border-right-width: 0;
        border-top-width: 0;
    }
}
.breakBigCamera {
    .border {
        border-left-width: 0;
        border-top-width: 0;
        border-bottom-width: 0;

    }
}
.sponsors{
    flex-grow: 2;
    font-size: 1.2em;
}
.schedule{
    height: 100%;
    width: 95%;
    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 0.6em;
    .scheduleTime{
        font-size: 1.7em;
        color: var(--secondary);
    }
    .scheduleRow{
        .scheduleIcon{
            height: 3em;
            aspect-ratio: 1;
        }
        .scheduleGame{
            font-size: 1.5em;
        }
        .scheduleCategory{
            color: var(--secondary);
        }
        .column{
            .row{
                gap: 0.1em 1em;
                flex-wrap: wrap;
            }
        }
    }
}
/* ... */

